# ssl-aim-trainer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ssl-aim-trainer.sln
include/forms/: MainWindow.h
include/process/: IProcess.h  WinProcess.h  check_process.h
src/: main.cpp
src/forms/: MainWindow.cpp
src/process/: WinProcess.cpp  check_process.cpp
ssl-aim-trainer/: App.xaml  App.xaml.cs  ssl-aim-trainer.csproj
ssl-aim-trainer/Classes/: AddressTypeNotSupportedException.cs  GotAddressValueEventArgs.cs  Memory.cs  MemoryReadType.cs  MemoryTypeNotSupportedException.cs  PointerAddressReader.cs  ProcessChecker.cs  ProcessCheckerEventArgs.cs  ProcessFoundEventArgs.cs
ssl-aim-trainer/Globals/: PointerAddresses.cs
ssl-aim-trainer/Views/: MainWindow.xaml  MainWindow.xaml.cs
